fix: responsive navbar on mobile

--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -7,6 +7,8 @@
   background-color: $color-gray-100;
   border-bottom: 2px solid $color-gray-200;
 
+  z-index: 999;
+
   &__content {
     width: 1200px;
     max-width: 100%;
@@ -71,7 +73,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  backdrop-filter: blur(2px);
 
   transform: translate(0);
   transition: 0.3s ease transform;
