--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -28,10 +28,6 @@ html {
 body {
   background: $color-gray-100;
 
-  @include dark {
-    background: $color-gray-500;
-  }
-
   background-attachment: fixed;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
@@ -70,6 +66,17 @@ html {
   touch-action: manipulation;
 }
 
+.container {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 2rem 1.5rem;
+
+  @include breakpoint(md) {
+    padding: 2rem 3rem;
+  }
+}
+
 .dark {
   .text {
     color: $color-gray-100;
@@ -87,6 +94,11 @@ html {
 
   .reversebg {
     background-color: $color-gray-200;
+  }
+
+  .border {
+    border: 2px solid $color-gray-100;
+    border-bottom: 2px solid $color-gray-500;
   }
 }
 
@@ -107,5 +119,10 @@ html {
 
   .reversebg {
     background-color: $color-gray-500;
+  }
+
+  .border {
+    border: 2px solid $color-gray-500;
+    border-bottom: 2px solid $color-gray-100;
   }
 }
